--- a/src/SICAF.Business/SICAF.Business.csproj
+++ b/src/SICAF.Business/SICAF.Business.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\SICAF.Services\SICAF.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
