--- a/src/SICAF.Data/SICAF.Data.csproj
+++ b/src/SICAF.Data/SICAF.Data.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\SICAF.Common\SICAF.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.17" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.14" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
