feat(config): Implement base entity and identity management, Added BaseEntity class for common properties, Created Role, User, and UserRole entities inheriting from BaseEntity, Implemented IAuditable interface for audit logging in Role and User entities, Developed repository pattern with IRepository and Specification interfaces, Introduced UnitOfWork for transaction management, Added data seeding services for roles and users, Implemented database migration and setup services, Configured Serilog, appsettings #4

--- a/example.env
+++ b/example.env
@@ -26,6 +26,7 @@ AdminSettings__Email=admin@ejemplo.com
 AdminSettings__Password=Admin123!
 AdminSettings__Name=Juan
 AdminSettings__LastName=Pérez
-AdminSettings__Username=admin.ejemplo
+AdminSettings__Username=admin123*
 AdminSettings__IdentificationNumber=123456789
-AdminSettings__Dependency=ADMIN
+AdminSettings__Username=juan.perez
+AdminSettings__Dependency=DIPON
