--- a/src/SICAF.Web/appsettings.Development.json
+++ b/src/SICAF.Web/appsettings.Development.json
@@ -1,8 +1,46 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ]
+  },
+  "AdminSettings": {
+    "Email": "",
+    "Password": "",
+    "Name": "",
+    "LastName": "",
+    "IdentificationNumber": "",
+    "Username": "",
+    "Dependency": "",
+    "Roles": []
+  },
+  "FeatureFlags": {
+    "MigrateAtStartup": true
+  },
+  "AuthSettings": {
+    "AccessFailedCount": 3,
+    "LockoutMinutes": 2
+  },
+  "AllowedHosts": "*"
 }
