--- a/src/SICAF.Web/appsettings.json
+++ b/src/SICAF.Web/appsettings.json
@@ -1,9 +1,46 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}",
+          "retainedFileCountLimit": 15
+        }
+      }
+    ]
+  },
+  "AdminSettings": {
+    "Email": "",
+    "Password": "",
+    "Name": "",
+    "LastName": "",
+    "IdentificationNumber": "",
+    "Username": "",
+    "Dependency": "",
+    "Roles": []
+  },
+  "FeatureFlags": {
+    "MigrateAtStartup": true
+  },
+  "AuthSettings": {
+    "AccessFailedCount": 3,
+    "LockoutMinutes": 15
   },
   "AllowedHosts": "*"
 }
