feat(config): agregar configuración de migraciones y roles de usuario, actualizar conexión a base de datos y mejorar la inicialización de la aplicación #5

--- a/example.env
+++ b/example.env
@@ -19,14 +19,25 @@
 ########################################################################################
 
 # Cadenas de conexión a base de datos
-ConnectionStrings__DefaultConnection = Data Source=(DESCRIPTION=(ADDRESS_LIST= (ADDRESS=(PROTOCOL=TCP)(HOST=255.255.255.255)(PORT=80)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=XE))); User ID=system;Password=password123
+ConnectionStrings__DefaultConnection="Server=servidormysql.azure.com;Port=3306;Database=sicafdb;Uid=my_user;Pwd=my_password;SslMode=Required;"
+
+# Configuración del Entorno
+ASPNETCORE_ENVIRONMENT="Development"
+
+# Configuración de Email
+EmailSettings__SmtpServer=smtp.gmail.com
+EmailSettings__SmtpPort=587
+EmailSettings__Username=tu_email@gmail.com
+EmailSettings__Password=tu_password_app
+EmailSettings__FromEmail=sicaf@example.com
+EmailSettings__FromName=Sistema SICAF
+EmailSettings__UseSSL=true
 
 # Configuraciones de Usuario Administrador
 AdminSettings__Email=admin@ejemplo.com
 AdminSettings__Password=Admin123!
 AdminSettings__Name=Juan
 AdminSettings__LastName=Pérez
-AdminSettings__Username=admin123*
 AdminSettings__IdentificationNumber=123456789
 AdminSettings__Username=juan.perez
 AdminSettings__Dependency=DIPON
