--- a/src/SICAF.Web/appsettings.json
+++ b/src/SICAF.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "server=servidormysql.mysql.database.azure.com;port=3306;database=sicaf;user=sicaf;password=ponal123*;SslMode=Required"
   },
   "Serilog": {
     "MinimumLevel": {
